[project]
name = "langgraph-models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-core>=0.3.74",
    "langchain-google-genai>=2.1.9",
    "langchain-groq>=0.3.7",
    "langgraph>=0.6.4",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
]
